Création de la méthode de sauvegarde
Création d'une méthode pour sauvegarder l'état des ennemis dans la classe prévue à cet effet, mise en place de scripts de test pour les classes et mise à jour du readme avec les objectifs probables

--- a/testScripts.ipynb
+++ b/testScripts.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,28 +45,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ennemis"
+    "#### Personnages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemple d'un simple pnj/ennemis, Melvin. La boucle transforme les attributs de la classe en un dictionnaire, dans lequel on extrait les valeurs. La méthode *\"sauvegarder\"* de la classe *Ennemis* fonctionne d'une manière similaire, avec une liste au lieu des `print()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hibours\n"
+      "Melvin\n",
+      "15\n",
+      "2\n",
+      "0\n",
+      "[0, 0]\n",
+      "['20 pièces', 'Large Axle', 'Big Bolt']\n",
+      "1\n"
      ]
     }
    ],
+   "source": [
+    "melvin = Personnage(\"Melvin\", 15, 2, 0, [\"20 pièces\", \"Large Axle\", \"Big Bolt\"], baton)\n",
+    "\n",
+    "for value in melvin.__dict__.values():\n",
+    "    if isinstance(value, Arme) :\n",
+    "        print(value.degat)\n",
+    "    else:\n",
+    "        print(value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ennemis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test de la classe *Ennemis()*. J'ajoute 2 monstres à une base de données \"monstresForet\" et je la sauvegarde en utilisant la méthode de la classe. Exécuter ce code crée un fichier .csv et un dossier *Sauvegardes* dans lequel il sera placé. Je ne sais pas si le contenu du csv est bon, faut vérifier; aussi il faut créer une méthode `charger(emplacementSave)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "monstresForet = Ennemis()\n",
     "monstresForet.ajouter(\"Hibours\", 59, 10, 6, [\"Fourrure\",\"Griffes\"])\n",
     "monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [\"2 pièces\"], epeeFer)\n",
     "\n",
-    "print(monstresForet.ennemisList[0].nom)"
+    "monstresForet.sauvegarder(\"foret\")"
    ]
   }
  ],
