Changement de l'argument de position
Pour que la fonction de charge des sauvegarde fonctionne, j'ai modifié la place de l'argument "pos", cependant il devient obligatoire

--- a/testScripts.ipynb
+++ b/testScripts.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,14 +68,14 @@
       "15\n",
       "2\n",
       "0\n",
-      "[0, 0]\n",
+      "[2, 6]\n",
       "['20 pièces', 'Large Axle', 'Big Bolt']\n",
       "1\n"
      ]
     }
    ],
    "source": [
-    "melvin = Personnage(\"Melvin\", 15, 2, 0, [\"20 pièces\", \"Large Axle\", \"Big Bolt\"], baton)\n",
+    "melvin = Personnage(\"Melvin\", 15, 2, 0, [\"20 pièces\", \"Large Axle\", \"Big Bolt\"], baton, pos=[2,6])\n",
     "\n",
     "for value in melvin.__dict__.values():\n",
     "    if isinstance(value, Arme) :\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
