début de la fonction de charge
J'ai tenté un truc, mais je sais pas trop, voir les commentaires dans le code.

--- a/testScripts.ipynb
+++ b/testScripts.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "melvin = Personnage(\"Melvin\", 15, 2, 0, [\"20 pièces\", \"Large Axle\", \"Big Bolt\"], baton, pos=[2,6])\n",
+    "melvin = Personnage(\"Melvin\", 15, 2, 0, [2,6], [\"20 pièces\", \"Large Axle\", \"Big Bolt\"], baton)\n",
     "\n",
     "for value in melvin.__dict__.values():\n",
     "    if isinstance(value, Arme) :\n",
@@ -100,15 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"['Hibours', 59, 10, 6, [0, 0], ['Fourrure', 'Griffes'], None]\"]\n",
+      "u\n"
+     ]
+    }
+   ],
    "source": [
     "monstresForet = Ennemis()\n",
-    "monstresForet.ajouter(\"Hibours\", 59, 10, 6, [\"Fourrure\",\"Griffes\"])\n",
-    "monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [\"2 pièces\"], epeeFer)\n",
+    "# monstresForet.ajouter(\"Hibours\", 59, 10, 6, [0,0], [\"Fourrure\",\"Griffes\"])\n",
+    "# monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [0,0], [\"2 pièces\"], epeeFer)\n",
     "\n",
-    "monstresForet.sauvegarder(\"foret\")"
+    "# monstresForet.sauvegarder(\"foret\")\n",
+    "monstresForet.charger(\"foret\")\n",
+    "print(monstresForet.ennemisList)"
    ]
   }
  ],
