Tentative de fonctions de sauvegarde/charge
ça fonctionne parfait sauf que les listes qui sont chargées à partir de csv marchent pas et sont prises comme des chaînes de caractères

--- a/testScripts.ipynb
+++ b/testScripts.ipynb
@@ -36,9 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "baton = Arme(1)\n",
-    "epeeFer = Arme(5)\n",
-    "tueuseDeDragons = Arme(15)"
+    "baton = Arme(\"baton\", 1)\n",
+    "epeeFer = Arme(\"epeeFer\", 5)\n",
+    "tueuseDeDragons = Arme(\"tueuseDeDragons\", 15)"
    ]
   },
   {
@@ -95,31 +95,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test de la classe *Ennemis()*. J'ajoute 2 monstres à une base de données \"monstresForet\" et je la sauvegarde en utilisant la méthode de la classe. Exécuter ce code crée un fichier .csv et un dossier *Sauvegardes* dans lequel il sera placé. Je ne sais pas si le contenu du csv est bon, faut vérifier; aussi il faut créer une méthode `charger(emplacementSave)`."
+    "Test de la classe *Ennemis()*. J'ajoute 2 monstres à une base de données \"monstresForet\" et je la sauvegarde en utilisant la méthode de la classe. Exécuter ce code crée un fichier .csv et un dossier *Sauvegardes* dans lequel il sera placé."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"['Hibours', 59, 10, 6, [0, 0], ['Fourrure', 'Griffes'], None]\"]\n",
-      "u\n"
+      "nom Hibours\n",
+      "pv 59\n",
+      "atk 10\n",
+      "defense 6\n",
+      "pos [0, 0]\n",
+      "inventaire ['Fourrure', 'Griffes']\n",
+      "arme None\n",
+      "nom Rat Garou\n",
+      "pv 33\n",
+      "atk 2\n",
+      "defense 6\n",
+      "pos [0, 0]\n",
+      "inventaire ['2 pièces']\n",
+      "arme <definitions.Arme object at 0x0000028200157DC0>\n"
      ]
     }
    ],
    "source": [
     "monstresForet = Ennemis()\n",
-    "# monstresForet.ajouter(\"Hibours\", 59, 10, 6, [0,0], [\"Fourrure\",\"Griffes\"])\n",
-    "# monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [0,0], [\"2 pièces\"], epeeFer)\n",
-    "\n",
-    "# monstresForet.sauvegarder(\"foret\")\n",
-    "monstresForet.charger(\"foret\")\n",
-    "print(monstresForet.ennemisList)"
+    "monstresForet.ajouter(\"Hibours\", 59, 10, 6, [0,0], [\"Fourrure\",\"Griffes\"])\n",
+    "monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [0,0], [\"2 pièces\"], epeeFer)\n",
+    "# monstresForet.charger(\"foret\")\n",
+    "for monstre in monstresForet.ennemisList :\n",
+    "    for attribut, valeur in monstre.__dict__.items():\n",
+    "        print(attribut, valeur)\n",
+    "monstresForet.sauvegarder(\"foret\")\n",
+    "\n"
    ]
   }
  ],
