Passage de la sauvegarde en JSON
Il y avait des problèmes de charge avec le csv qui ne sauvegardait pas les types d'objets et chargeait la totalité de la sauvegarde comme une seule chaine de caractères. Le passage en JSON permet de sauvegarder les classes sous forme de dictionnaires, ce qui est plus pratique.

--- a/testScripts.ipynb
+++ b/testScripts.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -111,6 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Hibours': {'nom': 'Hibours', 'pv': 59, 'atk': 10, 'defense': 6, 'pos': [0, 0], 'inventaire': ['Fourrure', 'Griffes'], 'arme': None}, 'Rat Garou': {'nom': 'Rat Garou', 'pv': 33, 'atk': 2, 'defense': 6, 'pos': [0, 0], 'inventaire': ['2 pièces'], 'arme': {'nom': 'epeeFer', 'degat': 5}}}\n",
+      "{'nom': 'epeeFer', 'degat': 5}\n",
       "nom Hibours\n",
       "pv 59\n",
       "atk 10\n",
@@ -124,19 +126,22 @@
       "defense 6\n",
       "pos [0, 0]\n",
       "inventaire ['2 pièces']\n",
-      "arme <definitions.Arme object at 0x0000028200157DC0>\n"
+      "arme <definitions.Arme object at 0x000001D33899A020>\n",
+      "arme epeeFer 5\n"
      ]
     }
    ],
    "source": [
     "monstresForet = Ennemis()\n",
-    "monstresForet.ajouter(\"Hibours\", 59, 10, 6, [0,0], [\"Fourrure\",\"Griffes\"])\n",
-    "monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [0,0], [\"2 pièces\"], epeeFer)\n",
-    "# monstresForet.charger(\"foret\")\n",
+    "# monstresForet.ajouter(\"Hibours\", 59, 10, 6, [0,0], [\"Fourrure\",\"Griffes\"])\n",
+    "# monstresForet.ajouter(\"Rat Garou\", 33, 2, 6, [0,0], [\"2 pièces\"], epeeFer)\n",
+    "monstresForet.charger(\"foret\")\n",
     "for monstre in monstresForet.ennemisList :\n",
     "    for attribut, valeur in monstre.__dict__.items():\n",
     "        print(attribut, valeur)\n",
-    "monstresForet.sauvegarder(\"foret\")\n",
+    "        if attribut == 'arme' and valeur is not None:\n",
+    "            print(attribut, valeur.__dict__['nom'], valeur.__dict__['degat'])\n",
+    "# monstresForet.sauvegarder(\"foret\")\n",
     "\n"
    ]
   }
