Ajout de Sauvegarde et début de colllisions
Ajustement des méthodes de sauvegarde et de charge et application de celles-ci dans le fichier d'initialisions des personnages/ennemis.
Début de l'application de collisions avec une boucle qui scanne un calque d'objets, mais cela ne semble pas fonctionner correctement, possibilité de remplacer. Ajout également de nouveaux sprites en bordel.

--- a/testScripts.ipynb
+++ b/testScripts.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from definitions import *"
+    "from NotreJeu.definitions import *"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test de la classe *Ennemis()*. J'ajoute 2 monstres à une base de données \"monstresForet\" et je la sauvegarde en utilisant la méthode de la classe. Exécuter ce code crée un fichier .csv et un dossier *Sauvegardes* dans lequel il sera placé."
+    "Test de la classe *Ennemis()*. J'ajoute 2 monstres à une base de données \"monstresForet\" et je la sauvegarde en utilisant la méthode de la classe. Exécuter ce code crée un fichier .json et un dossier *Sauvegardes* dans lequel il sera placé."
    ]
   },
   {
